--- a/src/main/java/view/CadastroAgua1.fxml
+++ b/src/main/java/view/CadastroAgua1.fxml
@@ -10,167 +10,171 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane cacheShape="false" centerShape="false" prefHeight="900.0" prefWidth="1100.0" scaleShape="false" style="-fx-background-color: #98FB98;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroAgua1">
+<AnchorPane cacheShape="false" centerShape="false" prefHeight="538.0" prefWidth="790.0" scaleShape="false" style="-fx-background-color: #98FB98;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroAgua1">
    <children>
-      <ImageView fitHeight="900.0" fitWidth="1100.0" layoutY="3.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="538.0" fitWidth="790.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="/image/TECSUS.png" />
+            <Image url="@../../../../Desktop/Faculdade/Banco/Projeto%20integrador/test.png" />
          </image>
       </ImageView>
-      <Label fx:id="lblRGI" layoutX="19.0" layoutY="37.0" prefHeight="21.0" prefWidth="64.0" text="RGI" AnchorPane.leftAnchor="25.0">
+      <Label fx:id="lblRGI" layoutX="18.0" layoutY="25.0" prefHeight="21.0" prefWidth="64.0" text="RGI" AnchorPane.leftAnchor="15.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="txtRGI" layoutX="92.0" layoutY="35.0" opacity="0.8" prefHeight="37.0" prefWidth="250.0">
+      <TextField fx:id="txtRGI" layoutX="61.0" layoutY="23.0" opacity="0.8" prefHeight="25.0" prefWidth="202.0">
          <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblbNumConta" layoutX="14.0" layoutY="162.0" text="N° DA CONTA" AnchorPane.leftAnchor="25.0">
+      <TextField fx:id="txtGR" layoutX="377.0" layoutY="22.0" opacity="0.8" prefHeight="25.0" prefWidth="78.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtNumeroConta" layoutX="206.0" layoutY="157.0" opacity="0.8" prefHeight="32.0" prefWidth="202.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblGR" layoutX="390.0" layoutY="37.0" text="GR">
+      <TextField fx:id="txtCodigoCliente" layoutX="175.0" layoutY="71.0" opacity="0.8" prefHeight="26.0" prefWidth="177.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtGR" layoutX="452.0" layoutY="35.0" opacity="0.8" prefHeight="32.0" prefWidth="94.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <TextField fx:id="txtMesReferencia" layoutX="290.0" layoutY="234.0" opacity="0.8" prefHeight="25.0" prefWidth="149.0">
+      <TextField fx:id="txtTipoLigacao" layoutX="574.0" layoutY="71.0" opacity="0.8" prefHeight="25.0" prefWidth="177.0" AnchorPane.rightAnchor="39.0">
          <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblMesReferencia" layoutX="18.0" layoutY="236.0" text="MÊS DE REFERÊNCIA" AnchorPane.leftAnchor="25.0">
+      <Label fx:id="lblbNumConta" layoutX="15.0" layoutY="113.0" text="N° da conta" AnchorPane.leftAnchor="15.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font></Label>
-      <Label fx:id="lblApresentacao" layoutX="14.0" layoutY="373.0" text="APRESENTAÇÃO" AnchorPane.leftAnchor="25.0">
+      <TextField fx:id="txtNumeroConta" layoutX="176.0" layoutY="111.0" opacity="0.8" prefHeight="26.0" prefWidth="177.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <Label fx:id="lblLeituraAtual" layoutX="16.0" layoutY="487.0" text="LEITURA ATUAL" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <Label fx:id="lblData" layoutX="304.0" layoutY="373.0" text="DATA">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <Label fx:id="lblLeitrura" layoutX="455.0" layoutY="373.0" text="LEITURA">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <Label fx:id="lblLeituraAnterior" layoutX="16.0" layoutY="429.0" text="LEITURA ANTERIOR" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtLeituraAntData" layoutX="281.0" layoutY="426.0" opacity="0.8" prefHeight="25.0" prefWidth="113.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <TextField fx:id="txtLeituraAtualData" layoutX="281.0" layoutY="484.0" opacity="0.8" prefHeight="25.0" prefWidth="113.0">
+      <Label fx:id="lblGR" layoutX="327.0" layoutY="25.0" text="GR">
          <font>
-            <Font name="Arial" size="20.0" />
-         </font></TextField>
-      <TextField fx:id="txtLeituraAntNumero" layoutX="451.0" layoutY="426.0" opacity="0.8" prefHeight="32.0" prefWidth="113.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font></TextField>
-      <TextField fx:id="txtLeituraAtualNumero" layoutX="451.0" layoutY="484.0" opacity="0.8" prefHeight="32.0" prefWidth="113.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font></TextField>
-      <Label fx:id="lblEndereco" layoutX="20.0" layoutY="700.0" text="ENDEREÇO" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font></Label>
-      <TextField fx:id="txtEndereco" layoutX="179.0" layoutY="698.0" opacity="0.8" prefHeight="32.0" prefWidth="425.0">
+      <TextField fx:id="txtHidrometro" layoutX="574.0" layoutY="111.0" opacity="0.8" prefHeight="26.0" prefWidth="188.0" AnchorPane.rightAnchor="28.0">
          <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblCidade" layoutX="16.0" layoutY="571.0" text="CIDADE" AnchorPane.leftAnchor="25.0">
+      <TextField fx:id="txtMesReferencia" layoutX="176.0" layoutY="151.0" opacity="0.8" prefHeight="26.0" prefWidth="91.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtCodigoCliente" layoutX="301.0" layoutY="98.0" opacity="0.8" prefHeight="37.0" prefWidth="306.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblUf" layoutX="499.0" layoutY="571.0" text="UF">
+      <Label fx:id="lblMesReferencia" layoutX="14.0" layoutY="154.0" text="Mês de referência" AnchorPane.leftAnchor="15.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font></Label>
-      <TextField fx:id="txtUf" layoutX="564.0" layoutY="566.0" opacity="0.8" prefHeight="32.0" prefWidth="57.0">
+      <Label fx:id="lblApresentacao" layoutX="18.0" layoutY="230.0" text="Apresentação" AnchorPane.leftAnchor="15.0">
          <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblLeituraAtual" layoutX="10.0" layoutY="303.0" text="Leitura atual" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblData" layoutX="257.0" layoutY="230.0" text="Data">
+         <font>
+            <Font name="Arial Bold" size="18.0" />
+         </font></Label>
+      <Label fx:id="lblLeitrura" layoutX="368.0" layoutY="230.0" text="Leitura">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblLeituraAnterior" layoutX="16.0" layoutY="262.0" text="Leitura anterior" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <TextField fx:id="txtLeituraAntData" layoutX="229.0" layoutY="259.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
+         <font>
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblCEP" layoutX="19.0" layoutY="630.0" text="CEP" AnchorPane.leftAnchor="25.0">
+      <TextField fx:id="txtLeituraAntNumero" layoutX="353.0" layoutY="259.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtHidrometro" layoutX="779.0" layoutY="230.0" opacity="0.8" prefHeight="32.0" prefWidth="202.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblCodCliente" layoutX="12.0" layoutY="103.0" text="CÓDIGO DO CLIENTE" AnchorPane.leftAnchor="25.0">
+      <TextField fx:id="txtLeituraAtualData" layoutX="227.0" layoutY="302.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtTipoLigacao" layoutX="779.0" layoutY="157.0" opacity="0.8" prefHeight="32.0" prefWidth="202.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblTipoDe" layoutX="530.0" layoutY="162.0" text="TIPO DE LIGAÇÃO">
+      <TextField fx:id="txtLeituraAtualNumero" layoutX="353.0" layoutY="300.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtCidade" layoutX="137.0" layoutY="566.0" opacity="0.8" prefHeight="32.0" prefWidth="289.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblHidrometro" layoutX="540.0" layoutY="236.0" text="HIDRÔMETRO">
+      <TextField fx:id="txtConsumo" layoutX="654.0" layoutY="258.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtCEP" layoutX="137.0" layoutY="628.0" opacity="0.8" prefHeight="32.0" prefWidth="158.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Label fx:id="lblConsumo" layoutX="721.0" layoutY="384.0" text="CONSUMO">
+      <Label fx:id="lblEndereco" layoutX="14.0" layoutY="425.0" text="Endereço" AnchorPane.leftAnchor="15.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font></Label>
-      <Label fx:id="lblMb" layoutX="855.0" layoutY="384.0" text="(M3)">
+      <TextField fx:id="txtCEP" layoutX="118.0" layoutY="344.0" opacity="0.8" prefHeight="26.0" prefWidth="110.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font></Label>
-      <TextField fx:id="txtConsumo" layoutX="954.0" layoutY="382.0" opacity="0.8" prefHeight="32.0" prefWidth="86.0">
-         <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font></TextField>
-      <Button fx:id="btnRetornarAgua1" layoutX="31.0" layoutY="843.0" mnemonicParsing="false" onAction="#changeScreenRetornar" opacity="0.96" prefHeight="43.0" prefWidth="229.0" text="Retornar" textFill="#4a8af2">
+      <TextField fx:id="txtCidade" layoutX="119.0" layoutY="383.0" opacity="0.8" prefHeight="25.0" prefWidth="321.0">
          <font>
-            <Font name="Arial" size="24.0" />
-         </font></Button>
-      <Button fx:id="btnSalvarContinuar" layoutX="666.0" layoutY="843.0" mnemonicParsing="false" onAction="#changeScreenContinuar" prefHeight="43.0" prefWidth="397.0" text="Salvar e continuar" textFill="#4a8af2">
+            <Font name="Arial" size="14.0" />
+         </font></TextField>
+      <TextField fx:id="txtUf" layoutX="534.0" layoutY="383.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
-            <Font name="Arial" size="24.0" />
-         </font></Button>
-      <Label fx:id="lblCidade1" layoutX="653.0" layoutY="700.0" text="N°">
+            <Font name="Arial" size="14.0" />
+         </font></TextField>
+      <TextField fx:id="txtEndereco" layoutX="137.0" layoutY="422.0" opacity="0.8" prefHeight="25.0" prefWidth="381.0">
          <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtNumero" layoutX="704.0" layoutY="698.0" opacity="0.8" prefHeight="32.0" prefWidth="78.0">
+            <Font name="Arial" size="14.0" />
+         </font></TextField>
+      <TextField fx:id="txtNumero" layoutX="584.0" layoutY="423.0" opacity="0.8" prefHeight="25.0" prefWidth="70.0">
          <font>
-            <Font name="Arial" size="20.0" />
+            <Font name="Arial" size="14.0" />
          </font>
       </TextField>
+      <TextField fx:id="txtComplemento" layoutX="173.0" layoutY="460.0" prefHeight="25.0" prefWidth="212.0" />
+      <Label fx:id="lblCidade" layoutX="14.0" layoutY="386.0" text="Cidade" AnchorPane.leftAnchor="14.0">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblUf" layoutX="487.0" layoutY="386.0" text="UF">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblCEP" layoutX="14.0" layoutY="347.0" text="CEP" AnchorPane.leftAnchor="14.0">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblCodCliente" layoutX="10.0" layoutY="73.0" text="Código do cliente" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblTipoDe" layoutX="426.0" layoutY="74.0" text="TIipo de ligação">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblHidrometro" layoutX="445.0" layoutY="113.0" text="Hidrômetro">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="lblConsumo" layoutX="530.0" layoutY="261.0" text="Consumo(m3)">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font></Label>
+      <Button fx:id="btnSalvarContinuar" layoutX="565.0" layoutY="491.0" mnemonicParsing="false" onAction="#changeScreenContinuar" prefHeight="30.0" prefWidth="222.0" text="Salvar e continuar" textFill="#4a8af2" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="565.0" AnchorPane.rightAnchor="19.0">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnRetornarAgua1" layoutX="11.0" layoutY="491.0" mnemonicParsing="false" onAction="#changeScreenRetornar" opacity="0.96" prefHeight="30.0" prefWidth="188.0" text="Retornar" textFill="#4a8af2" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="11.0">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </Button>
+      <Label fx:id="lblCidade1" layoutX="556.0" layoutY="426.0" text="N°">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="15.0" layoutY="462.0" text="Complemeto" AnchorPane.leftAnchor="15.0">
+         <font>
+            <Font name="Arial Bold" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
