--- a/src/main/java/view/RelatorioEnergia.fxml
+++ b/src/main/java/view/RelatorioEnergia.fxml
@@ -1,172 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1100.0" style="-fx-background-color: #98FB98;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RelatorioEnergia">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1100.0" style="-fx-background-color: #98FB98;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="900.0" fitWidth="1100.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="/image/TECSUS.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="25.0" layoutY="24.0" prefHeight="55.0" prefWidth="531.0" text="RELATÓRIO DE ENERGIA">
-         <font>
-            <Font name="Arial Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="102.0" layoutY="156.0" text="Nome do cliente" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="100.0" layoutY="207.0" text="Documento" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="95.0" layoutY="260.0" text="Nome fornecedor" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="78.0" layoutY="308.0" text="CNPJ Fornecedor" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="71.0" layoutY="359.0" text="Tipo de fornecedor" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="95.0" layoutY="408.0" text="CEP" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="101.0" layoutY="462.0" text="Endereço" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="100.0" layoutY="514.0" text="Número" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="72.0" layoutY="462.0" AnchorPane.leftAnchor="100.0">
-         <font>
-            <Font name="Arial Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="105.0" layoutY="570.0" text="Mês de referência" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="91.0" layoutY="620.0" text="Data de vencimento" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="94.0" layoutY="680.0" text="Consumo" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="95.0" layoutY="740.0" text="Total a pagar" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
-      <TextField fx:id="RGI" layoutX="250.0" layoutY="102.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="NomeCliente" disable="true" layoutX="250.0" layoutY="151.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="CNPJCliente" disable="true" layoutX="250.0" layoutY="202.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="NomeFornecedor" disable="true" layoutX="250.0" layoutY="255.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="CNPJFornecedor" disable="true" layoutX="250.0" layoutY="303.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="TipoFornecedor" disable="true" layoutX="250.0" layoutY="354.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="CEP" disable="true" layoutX="250.0" layoutY="403.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="Endereco" disable="true" layoutX="250.0" layoutY="457.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="Numero" disable="true" layoutX="250.0" layoutY="509.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="GR" disable="true" layoutX="250.0" layoutY="565.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="MesReferencia" disable="true" layoutX="250.0" layoutY="615.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="Consumo" disable="true" layoutX="250.0" layoutY="670.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="TotalPagar" disable="true" layoutX="250.0" layoutY="730.0" prefHeight="30.0" prefWidth="500.0">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </TextField>
-      <Button fx:id="btnRetornarInicio" layoutX="873.0" layoutY="846.0" mnemonicParsing="false" onAction="#changeScreenRetornar" prefHeight="33.0" prefWidth="180.0" text="Retornar" textFill="#075ffa">
-         <font>
-            <Font name="Arial" size="18.0" />
-         </font></Button>
-      <Button fx:id="btnBuscar" layoutX="948.0" layoutY="102.0" mnemonicParsing="false" onAction="#procurarNumeroInstalacao" prefHeight="30.0" prefWidth="126.0" text="Buscar">
-         <font>
-            <Font name="Arial" size="18.0" />
-         </font></Button>
-      <Label layoutX="102.0" layoutY="107.0" text="Número de instalação" AnchorPane.leftAnchor="25.0">
-         <font>
-            <Font name="Arial Bold" size="20.0" />
-         </font>
-      </Label>
+      <ImageView fitHeight="900.0" fitWidth="1100.0" opacity="0.15" pickOnBounds="true" preserveRatio="true" />
+      <TableView fx:id = "TabelaEnergia"prefHeight="700.0" prefWidth="900.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="100.0">
+
+        <columns>
+            <TableColumn fx:id="NumInstalacao" prefWidth="160.0" text="Numero de instalação" />
+            <TableColumn fx:id="DocCliente" prefWidth="128.0" text="Documento cliente" />
+            <TableColumn fx:id="CNPJFornecedor" prefWidth="128.0" text="CNPJ Fornecedor" />
+            <TableColumn fx:id="CEP" prefWidth="128.0" text="CEP" />
+            <TableColumn fx:id="NResidencia" prefWidth="128.0" text="Número da residência" />
+        </columns>
+
+      </TableView>
    </children>
 </AnchorPane>
