--- a/src/main/java/view/InstalacaoCadastrada.fxml
+++ b/src/main/java/view/InstalacaoCadastrada.fxml
@@ -36,12 +36,12 @@
       </TextField>
       <ImageView fitHeight="120.0" fitWidth="120.0" layoutX="73.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@RGIAgua.png" />
+            <Image url="image/RGIAgua.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="120.0" fitWidth="120.0" layoutX="73.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@InstalacaoLuz.png" />
+            <Image url="image/InstalacaoLuz.png" />
          </image>
       </ImageView>
       <Button fx:id="txtBotaoBuscarRGI" layoutX="626.0" layoutY="346.0" mnemonicParsing="false" onAction="#changeScreenBuscar" prefHeight="20.0" prefWidth="120.0" text="Buscar">
