--- a/src/main/java/view/CadastroAgua1semEnd.fxml
+++ b/src/main/java/view/CadastroAgua1semEnd.fxml
@@ -73,15 +73,15 @@
          <font>
             <Font name="Arial Bold" size="16.0" />
          </font></Label>
-      <TextField fx:id="txtLeituraAntData" layoutX="227.0" layoutY="307.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
+      <TextField fx:id="txtLeituraAntData" layoutX="227.0" layoutY="307.0" onKeyReleased="#mascaraDataAnt"  opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font></TextField>
-      <TextField fx:id="txtLeituraAntNumero" layoutX="353.0" layoutY="307.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
+      <TextField fx:id="txtLeituraAntNumero" layoutX="353.0" layoutY="307.0"  opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font></TextField>
-      <TextField fx:id="txtLeituraAtualData" layoutX="227.0" layoutY="352.0" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
+      <TextField fx:id="txtLeituraAtualData" layoutX="227.0" layoutY="352.0"  onKeyReleased="#mascaraDataAtual" opacity="0.8" prefHeight="25.0" prefWidth="100.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font></TextField>
