--- a/src/main/java/view/PessoaFisica.fxml
+++ b/src/main/java/view/PessoaFisica.fxml
@@ -28,7 +28,7 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtCPF" layoutX="302.0" layoutY="123.0" prefHeight="30.0" prefWidth="375.0">
+      <TextField fx:id="txtCPF" layoutX="302.0" layoutY="123.0" onKeyReleased="#mascaraCPF" prefHeight="30.0" prefWidth="375.0">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
@@ -48,7 +48,7 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtCNPJFornecedor" layoutX="302.0" layoutY="352.0" prefHeight="30.0" prefWidth="375.0">
+      <TextField fx:id="txtCNPJFornecedor" layoutX="302.0" layoutY="352.0" onKeyReleased="#mascaraCNPJ" prefHeight="30.0" prefWidth="375.0">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
