--- a/src/main/java/view/PessoaJuridica.fxml
+++ b/src/main/java/view/PessoaJuridica.fxml
@@ -28,7 +28,7 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtCNPJEmpresa" layoutX="331.0" layoutY="120.0" prefHeight="33.0" prefWidth="358.0">
+      <TextField fx:id="txtCNPJEmpresa" layoutX="331.0" layoutY="120.0" onKeyReleased="#mascaraCNPJCliente" prefHeight="33.0" prefWidth="358.0">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
@@ -43,7 +43,7 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtCNPJFornecedor" layoutX="331.0" layoutY="328.0" prefHeight="33.0" prefWidth="358.0">
+      <TextField fx:id="txtCNPJFornecedor" layoutX="331.0" layoutY="328.0" onKeyReleased="#mascaraCNPJFornecedor" prefHeight="33.0" prefWidth="358.0">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
