--- a/src/main/java/view/CadastroEnergia1.fxml
+++ b/src/main/java/view/CadastroEnergia1.fxml
@@ -17,10 +17,10 @@
    <children>
       <ImageView fitHeight="538.0" fitWidth="790.0" layoutX="1.0" layoutY="1.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="image/TECSUS.png" />
+            <Image url="@../../../../Desktop/Faculdade/Banco/Projeto%20integrador/test.png" />
          </image>
       </ImageView>
-      <TextField fx:id="txtCEPEnergia" layoutX="133.0" layoutY="52.0" onKeyReleased="#mascaraCEP" prefHeight="30.0" prefWidth="200.0" AnchorPane.topAnchor="52.0">
+      <TextField fx:id="txtCEPEnergia" layoutX="133.0" layoutY="52.0" prefHeight="30.0" prefWidth="200.0" AnchorPane.topAnchor="52.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font>
@@ -50,7 +50,7 @@
             <Font name="Arial" size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtComplemento" layoutX="133.0" layoutY="184.0" prefHeight="30.0" prefWidth="200.0" promptText="Casa/Apartamento" AnchorPane.topAnchor="184.0">
+      <TextField fx:id="txtComplemento" layoutX="133.0" layoutY="184.0" prefHeight="30.0" prefWidth="200.0" AnchorPane.topAnchor="184.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font>
@@ -70,7 +70,7 @@
             <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="33.0" layoutY="250.0" prefHeight="30.0" prefWidth="121.0" text="Código fiscal*" AnchorPane.leftAnchor="15.0">
+      <Label layoutX="33.0" layoutY="250.0" prefHeight="30.0" prefWidth="111.0" text="Código fiscal*" AnchorPane.leftAnchor="15.0">
          <font>
             <Font name="Arial Bold" size="16.0" />
          </font>
@@ -120,12 +120,12 @@
             <Font name="Arial" size="14.0" />
          </font>
       </TextField>
-      <Button fx:id="btnVoltarTelaIncial" layoutX="534.0" layoutY="484.0" mnemonicParsing="false" onAction="#changeScreenVoltarTelaInicial" prefHeight="30.0" prefWidth="221.0" text="Salvar e voltar á tela inicial" textFill="#4a8af2" AnchorPane.bottomAnchor="10.0">
+      <Button fx:id="btnVoltarTelaIncial" layoutX="534.0" layoutY="484.0" mnemonicParsing="false" onAction="#changeScreenVoltarTelaInicial" prefHeight="30.0" prefWidth="221.0" style="-fx-background-radius: 5em;" text="Salvar e voltar á tela inicial" textFill="#4a8af2" AnchorPane.bottomAnchor="10.0">
          <font>
             <Font name="Arial" size="16.0" />
          </font>
       </Button>
-      <Button fx:id="btnRetornarEnergia" layoutX="33.0" layoutY="484.0" mnemonicParsing="false" onAction="#changeScreenRetornar" opacity="0.96" prefHeight="30.0" prefWidth="133.0" text="Retornar" textFill="#4a8af2" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0">
+      <Button fx:id="btnRetornarEnergia" layoutX="33.0" layoutY="484.0" mnemonicParsing="false" onAction="#changeScreenRetornar" opacity="0.96" prefHeight="30.0" prefWidth="133.0" style="-fx-background-radius: 5em;" text="Retornar" textFill="#4a8af2" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0">
          <font>
             <Font name="Arial" size="16.0" />
          </font>
@@ -155,16 +155,16 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <Label layoutX="15.0" layoutY="187.0" text="Complemento" AnchorPane.topAnchor="187.0">
+      <Label layoutX="15.0" layoutY="187.0" text="Complemento*" AnchorPane.topAnchor="187.0">
          <font>
             <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
+      <ComboBox fx:id="comboUF" layoutX="383.0" layoutY="98.0" prefHeight="25.0" prefWidth="60.0" style="-fx-background-radius: 5em;" />
       <Label layoutX="534.0" layoutY="475.0" text="Campos com * são obrigatórios">
          <font>
             <Font name="Arial Bold" size="12.0" />
          </font>
       </Label>
-      <ComboBox fx:id="comboUF" layoutX="383.0" layoutY="98.0" prefHeight="25.0" prefWidth="60.0" />
    </children>
 </AnchorPane>
