--- a/src/main/java/view/PessoaJuridica.fxml
+++ b/src/main/java/view/PessoaJuridica.fxml
@@ -15,7 +15,7 @@
    <children>
       <ImageView fitHeight="538.0" fitWidth="790.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="image/TECSUS.png" />
+            <Image url="@../../../../Desktop/Faculdade/Banco/Projeto%20integrador/test.png" />
          </image>
       </ImageView>
       <Label layoutX="56.0" layoutY="21.0" prefHeight="58.0" prefWidth="253.0" text="Informações Pessoais:" AnchorPane.leftAnchor="15.0">
@@ -48,13 +48,13 @@
             <Font name="Arial" size="18.0" />
          </font>
       </TextField>
-      <ComboBox fx:id="comboTipo" layoutX="331.0" layoutY="382.0" prefHeight="30.0" prefWidth="174.0" />
-      <Button fx:id="btnProsseguirPJ" layoutX="546.0" layoutY="471.0" mnemonicParsing="false" onAction="#changeScreenProsseguir" prefHeight="33.0" prefWidth="216.0" text="Salvar e prosseguir" textFill="#4a8af2">
+      <ComboBox fx:id="comboTipo" layoutX="331.0" layoutY="382.0" prefHeight="30.0" prefWidth="174.0" style="-fx-background-radius: 5em;" />
+      <Button fx:id="btnProsseguirPJ" layoutX="546.0" layoutY="471.0" mnemonicParsing="false" onAction="#changeScreenProsseguir" prefHeight="33.0" prefWidth="216.0" style="-fx-background-radius: 5em;" text="Salvar e prosseguir" textFill="#4a8af2">
          <font>
             <Font name="Arial" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="btnRetornarPJ" layoutX="14.0" layoutY="471.0" mnemonicParsing="false" onAction="#changeScreenRetornar" opacity="0.96" prefHeight="30.0" prefWidth="189.0" text="Retornar" textFill="#4a8af2" AnchorPane.leftAnchor="14.0">
+      <Button fx:id="btnRetornarPJ" layoutX="14.0" layoutY="471.0" mnemonicParsing="false" onAction="#changeScreenRetornar" opacity="0.96" prefHeight="30.0" prefWidth="189.0" style="-fx-background-radius: 5em;" text="Retornar" textFill="#4a8af2" AnchorPane.leftAnchor="14.0">
          <font>
             <Font name="Arial" size="20.0" />
          </font>
