--- a/src/main/java/view/RelatorioCliente.fxml
+++ b/src/main/java/view/RelatorioCliente.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="790.0" style="-fx-background-color: #98FB98;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="790.0" style="-fx-background-color: #98FB98;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RelatorioCliente">
    <children>
       <ImageView fitHeight="538.0" fitWidth="790.0" opacity="0.15" pickOnBounds="true" preserveRatio="true" />
       <TableView layoutX="62.0" layoutY="61.0" prefHeight="448.0" prefWidth="687.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="75.0">
@@ -22,7 +22,7 @@
             <TableColumn fx:id="ClNumero" prefWidth="57.0" text="N°" />
         </columns>
       </TableView>
-      <Button fx:id="btnRetornar" layoutX="14.0" layoutY="489.0" mnemonicParsing="false" onAction="#changeScreenRetornar" prefWidth="110.0" style="-fx-background-radius: 5em;" text="Retornar" textFill="#4a8af2" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
+      <Button fx:id="btnRetornar" layoutX="14.0" layoutY="489.0" mnemonicParsing="false" prefWidth="110.0" style="-fx-background-radius: 5em;" text="Retornar" textFill="#4a8af2" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
          <font>
             <Font name="Arial" size="18.0" />
          </font>
